RBEA-453: Fixed the issue of Stack On setting not working for none option

--- a/src/blocks/testimonial/styles/style.scss
+++ b/src/blocks/testimonial/styles/style.scss
@@ -131,41 +131,41 @@
     text-align: center;
   }
 }
-.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 2 - 0.5em);
 }
-.has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 3 - 1em);
 }
-.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 4 - 1em);
 }
-.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 2 - 1em);
 }
 
-.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 2.975 - 1.5em);
 }
-.has-medium-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 4 - 1.5em);
 }
-.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 2.01 - 1.5em);
 }
-.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 3.03 - 2em);
 }
-.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 4.08 - 2em);
 }
-.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 2.02 - 2em);
 }
-.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 3.09 - 2.5em);
 }
-.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 4.15 - 2.5em);
 }
 
@@ -180,41 +180,41 @@
     .alignfull {
       .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator),
       .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator) {
-        &.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 2 - 0.5em);
         }
-        &.has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 3 - 1em);
         }
-        &.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 4 - 1em);
         }
-        &.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 2 - 1em);
         }
 
-        &.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 2.975 - 1.5em);
         }
-        &.has-medium-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 4 - 1.5em);
         }
-        &.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 2.01 - 1.5em);
         }
-        &.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 3.03 - 2em);
         }
-        &.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 4.08 - 2em);
         }
-        &.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 2.02 - 2em);
         }
-        &.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 3.09 - 2.5em);
         }
-        &.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+        &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
           max-width: calc(100% / 4.15 - 2.5em);
         }
       }
@@ -223,27 +223,27 @@
 }
 
 @media (max-width: 769px) {
-  .has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
-  .has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
-  .has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+  .responsive-block-editor-addons-block-testimonial.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
+  .responsive-block-editor-addons-block-testimonial.has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
+  .responsive-block-editor-addons-block-testimonial.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
     max-width: calc(100% / 2 - 0.5em);
     margin-bottom: 20px;
   }
-  .has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
-  .has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
-  .has-medium-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+  .responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
+  .responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
+  .responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
     max-width: calc(100% / 2 - 1em);
     margin-bottom: 20px;
   }
-  .has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
-  .has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
-  .has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+  .responsive-block-editor-addons-block-testimonial.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
+  .responsive-block-editor-addons-block-testimonial.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
+  .responsive-block-editor-addons-block-testimonial.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
     max-width: calc(100% / 2.01 - 1.5em);
     margin-bottom: 20px;
   }
-  .has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
-  .has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
-  .has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+  .responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
+  .responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
+  .responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
     max-width: calc(100% / 2.02 - 2em);
     margin-bottom: 20px;
   }
@@ -259,28 +259,28 @@
       .alignfull {
         .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator),
         .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator) {
-          &.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
-          & .has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
-          &.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+          &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
+          &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
+          &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
             max-width: calc(100% / 2 - 0.5em);
             margin-bottom: 20px;
           }
-          &.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
-          &.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
-          &.has-medium-gutter.has-4-columns
+          &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
+          &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
+          &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-4-columns
             > *:not(.block-editor-inner-blocks) {
             max-width: calc(100% / 2 - 1em);
             margin-bottom: 20px;
           }
-          &.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
-          &.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
-          &.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+          &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
+          &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
+          &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
             max-width: calc(100% / 2.01 - 1.5em);
             margin-bottom: 20px;
           }
-          &.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
-          &.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
-          &.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
+          &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
+          &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
+          &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
             max-width: calc(100% / 2.02 - 2em);
             margin-bottom: 20px;
           }
@@ -295,11 +295,11 @@
   }
   .page.sidebar-position-no:not(.woocommerce)
     .alignfull
-    .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator).has-medium-gutter.has-3-columns
+    .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator).responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-3-columns
     > *:not(.block-editor-inner-blocks),
   .page.sidebar-position-no:not(.woocommerce)
     .alignfull
-    .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator).has-medium-gutter.has-3-columns
+    .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator).responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-3-columns
     > *:not(.block-editor-inner-blocks) {
     max-width: 100%;
   }
@@ -316,20 +316,22 @@
       .alignfull {
         .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator),
         .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator) {
-          &.has {
-            &-large,
-            &-small,
-            &-medium,
-            &-huge {
-              &-gutter.has {
-                &-1,
-                &-2,
-                &-3,
-                &-4 {
-                  &-columns > *:not(.block-editor-inner-blocks) {
-                    max-width: 100%;
-                    width: 100%;
-                    margin-bottom: 20px;
+          &.responsive-block-editor-addons-block-testimonial {
+            &.has {
+              &-large,
+              &-small,
+              &-medium,
+              &-huge {
+                &-gutter.has {
+                  &-1,
+                  &-2,
+                  &-3,
+                  &-4 {
+                    &-columns > *:not(.block-editor-inner-blocks) {
+                      max-width: 100%;
+                      width: 100%;
+                      margin-bottom: 20px;
+                    }
                   }
                 }
               }
@@ -340,7 +342,7 @@
     }
   }
 
-  .has {
+  .responsive-block-editor-addons-block-testimonial.has {
     &-large,
     &-small,
     &-medium,
