RBEA-479: post-timeline: transperent header fixed

--- a/src/blocks/post-timeline/styles/style.scss
+++ b/src/blocks/post-timeline/styles/style.scss
@@ -6,6 +6,7 @@
 .responsive-block-editor-addons-block-post-timeline {
   margin: 0 0 1.2em 0;
   position: relative;
+  background-color: transparent!important;
 
   .is-grid {
     display: grid;
