backward compatibility in advanced heading & Toc: fixes

--- a/src/blocks/table-of-contents/styles/style.scss
+++ b/src/blocks/table-of-contents/styles/style.scss
@@ -170,8 +170,10 @@ ol.rbea-number {
 	}    
 }
 
-
-
 .responsive-block-editor-addons-toc__title-wrap {
 	justify-content: space-between;
+}
+
+.responsive-block-editor-addons-toc__list-wrap .responsive-block-editor-addons-toc__list li {
+	color: #10659C;
 }
