RBEA-484: Add admin notice for user review in RBEA plugin

--- a/admin/css/responsive-block-editor-addons-admin.css
+++ b/admin/css/responsive-block-editor-addons-admin.css
@@ -651,3 +651,47 @@ p .responsive-block-editor-addons-info {
     margin-bottom: 0.5em;
     margin-right: -0.5em;
 }
+
+.rbea-review-notice.updated {
+    padding-bottom: 1%;
+    display: flex;
+    flex-direction: column;
+}
+
+.rbea-review-btns {
+    background-color: #2271b1;
+    padding: 10px;
+    max-width: 100px;
+    text-align: center;
+    border-radius: 2px;
+}
+
+.rbea-review-already-done-btn {
+    margin-left: 10px;
+}
+
+.rbea-review-btns-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.rbea-review-btns:hover {
+    background-color: #135e96;
+}
+
+.rbea-review-btns > a {
+    color: white;
+    text-decoration: none;
+}
+
+.rbea-review-rate-us-btn > a > i {
+    margin-left: 5px;
+    line-height: inherit;
+}
+
+@media (max-width: 768px) {
+    .rbea-review-notice.updated {
+        padding-bottom: 2% !important;
+    }
+}
+
