fix: info-block: link not working on image

--- a/src/blocks/info-block/styles/style.scss
+++ b/src/blocks/info-block/styles/style.scss
@@ -639,6 +639,7 @@ a.responsive-block-editor-addons-infbox__link-to-all {
 }
 
 .responsive-block-editor-addons-infobox-cta-link-complete-box {
+  z-index: 100;
   position: absolute;
   height: 100%;
   width: 100%;
