--- a/src/blocks/count-up/styles/style.scss
+++ b/src/blocks/count-up/styles/style.scss
@@ -48,6 +48,10 @@
   flex-direction: column;
   background-color: #f00;
 
+  @media (max-width: 767px) {
+    margin-bottom: 5%;
+  }
+
   &:not(.has-background) {
     background: hsla(240, 5%, 57%, 0.1);
   }
