--- a/src/blocks/icons-list/styles/style.scss
+++ b/src/blocks/icons-list/styles/style.scss
@@ -131,3 +131,11 @@
   width: 100%;
   height: 100%;
 }
+
+@media (max-width: 976px) {
+	.responsive-block-editor-addons-icon-list__source-wrap > .responsive-block-editor-addons-icon-list__source-icon {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+}
