--- a/src/blocks/block-layout/styles/styles.editor.scss
+++ b/src/blocks/block-layout/styles/styles.editor.scss
@@ -504,7 +504,7 @@ div[data-type*="responsive-block-editor-addons/rbea-container"][data-align="full
 	justify-content: space-between;
 	align-items: center;
 	margin-bottom: 25px;
-	background: #f2f2f2;
+	background: #fffef4;
 	padding: 30px 20px;
 
 	h2 {
@@ -583,6 +583,7 @@ div[data-type*="responsive-block-editor-addons/rbea-container"][data-align="full
 }
 
 .rbea-pattern-wrapper {
+	width: 300px;
 	display: flex;
 	align-items: center;
 }
