RBEA-515: Fixed - CSS from different blocks acting as a universal CSS for multiple blocks

--- a/src/blocks/team/styles/styles.editor.scss
+++ b/src/blocks/team/styles/styles.editor.scss
@@ -142,7 +142,7 @@
 }
 
 @media (max-width: 576px) {
-  .has {
+	.wp-block-responsive-block-editor-addons-team-wrapper.has {
     &-large,
     &-small,
     &-medium,
