RBEA-589: social share: fix-font icon picker view

--- a/src/blocks/social-share/styles/styles.editor.scss
+++ b/src/blocks/social-share/styles/styles.editor.scss
@@ -27,3 +27,8 @@
         width: 14px;
     }
 }
+
+.responsive-block-editor-addons-share-icon-modal .rfipdropdown--open {
+    top: 50px!important;
+    width: 100%;
+}
