--- a/src/blocks/shape-divider/styles/styles.editor.scss
+++ b/src/blocks/shape-divider/styles/styles.editor.scss
@@ -1,4 +1,39 @@
+.rbea-inspector-tab {
+  .components-radio-control__option {
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  .components-radio-control__option input:checked+label>div.responsive-blocks-editor-addons-design-panel-item{
+    box-shadow: inset 0 0 0 1px #1e1e1e;
+  }
+
+  input[type="radio"] {
+    display:none;
+  }
+
+  .responsive-blocks-editor-addons-design-panel-item {
+    margin: 4px;
+    padding: 4px;
+  }
+  .responsive-blocks-editor-addons-design-panel-item__svg {
+    height: 53.248px;
+    padding: 4px;
+
+    svg {
+      top: 0px;
+      left: 0px;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      pointer-events: none;
+      z-index: -1;
+    }
+  }
+}
 .wp-block[data-type="responsive-block-editor-addons/shape-divider"] {
+
   .has-fixed-toolbar & .block-editor-block-list__block-edit::before {
     display: none;
   }
