Blocks inside section always float to left in editor

--- a/src/blocks/section/styles/styles.editor.scss
+++ b/src/blocks/section/styles/styles.editor.scss
@@ -88,9 +88,9 @@
   height: 100%;
 }
 
-.responsive-section-inner-wrap .block-editor-block-list__block {
-  margin-left: 0;
-  margin-right: 0;
+.responsive-section-inner-wrap .block-editor-block-list__block.responsive-section-inner-wrap .block-editor-block-list__block {
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
 }
 
