--- a/src/blocks/section/styles/styles.editor.scss
+++ b/src/blocks/section/styles/styles.editor.scss
@@ -88,7 +88,7 @@
   height: 100%;
 }
 
-.responsive-section-inner-wrap .block-editor-block-list__block.responsive-section-inner-wrap .block-editor-block-list__block {
+.responsive-section-inner-wrap .block-editor-block-list__block {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
