Backward compatibility: Shape divider issue

--- a/src/blocks/shape-divider/styles/style.scss
+++ b/src/blocks/shape-divider/styles/style.scss
@@ -67,6 +67,11 @@
   }
 }
 
+.wp-block-responsive-block-editor-addons-shape-divider__svg-wrapper svg {
+  height: 100%;
+  width: 100%;
+}
+
 .page.page-template-gutenberg-fullwidth,
 .page.page-template-full-width-page,
 .page.sidebar-position-no:not(.woocommerce) {
