--- a/src/blocks/testimonial/styles/style.scss
+++ b/src/blocks/testimonial/styles/style.scss
@@ -3,7 +3,7 @@
  * Loads on front end and back end
  */
 
-.responsive-block-editor-addons-block-testimonial {
+ .responsive-block-editor-addons-block-testimonial {
   margin: 0 auto;
   border-radius: 5px;
 
@@ -223,21 +223,25 @@
 }
 
 @media (max-width: 769px) {
+  .responsive-block-editor-addons-block-testimonial.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
   .responsive-block-editor-addons-block-testimonial.has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
   .responsive-block-editor-addons-block-testimonial.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
     max-width: calc(100% / 2 - 0.5em);
     margin-bottom: 20px;
   }
+  .responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
   .responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
   .responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
     max-width: calc(100% / 2 - 1em);
     margin-bottom: 20px;
   }
+  .responsive-block-editor-addons-block-testimonial.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
   .responsive-block-editor-addons-block-testimonial.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
   .responsive-block-editor-addons-block-testimonial.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
     max-width: calc(100% / 2.01 - 1.5em);
     margin-bottom: 20px;
   }
+  .responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
   .responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
   .responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
     max-width: calc(100% / 2.02 - 2em);
@@ -255,22 +259,26 @@
       .alignfull {
         .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator),
         .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator) {
+          &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
           &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
           &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
             max-width: calc(100% / 2 - 0.5em);
             margin-bottom: 20px;
           }
+          &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
           &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
           &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-4-columns
             > *:not(.block-editor-inner-blocks) {
             max-width: calc(100% / 2 - 1em);
             margin-bottom: 20px;
           }
+          &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
           &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
           &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
             max-width: calc(100% / 2.01 - 1.5em);
             margin-bottom: 20px;
           }
+          &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks),
           &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks),
           &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
             max-width: calc(100% / 2.02 - 2em);
@@ -281,59 +289,6 @@
     }
   }
 }
-
-@media (max-width: 769px) {
-  .responsive-block-editor-addons-block-testimonial.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks){
-    max-width: calc(100% / 2 - 0.5em);
-    margin-bottom: 0px;
-  }
-  .responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks){
-    max-width: calc(100% / 2 - 1em);
-    margin-bottom: 0px;
-  }
-  .responsive-block-editor-addons-block-testimonial.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
-    max-width: calc(100% / 2.01 - 1.5em);
-    margin-bottom: 0px;
-  }
-  .responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
-    max-width: calc(100% / 2.02 - 2em);
-    margin-bottom: 0px;
-  }
-
-  .page,
-  .single,
-  .blog,
-  .search,
-  .archive {
-    &.page-template-gutenberg-fullwidth,
-    &.sidebar-position-no:not(.woocommerce) {
-      .alignwide,
-      .alignfull {
-        .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator),
-        .wp-block-responsive-block-editor-addons-testimonial-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator) {
-          &.responsive-block-editor-addons-block-testimonial.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks){
-            max-width: calc(100% / 2 - 0.5em);
-            margin-bottom: 0px;
-          }
-          &.responsive-block-editor-addons-block-testimonial.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks)
-            > *:not(.block-editor-inner-blocks) {
-            max-width: calc(100% / 2 - 1em);
-            margin-bottom: 0px;
-          }
-          &.responsive-block-editor-addons-block-testimonial.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks){
-            max-width: calc(100% / 2.01 - 1.5em);
-            margin-bottom: 0px;
-          }
-          &.responsive-block-editor-addons-block-testimonial.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
-            max-width: calc(100% / 2.02 - 2em);
-            margin-bottom: 0px;
-          }
-        }
-      }
-    }
-  }
-}
-
 @media (max-width: 767px) {
   .wp-block-responsive-block-editor-addons-testimonial-wrapper {
     display: block;
