RBEA-456-feat: add none option in testimonial slider

--- a/src/blocks/testimonial-slider/styles/styles.editor.scss
+++ b/src/blocks/testimonial-slider/styles/styles.editor.scss
@@ -25,6 +25,7 @@
 }
 #wpwrap .edit-post-visual-editor ul.slick-dots {
   margin: 0;
+  padding-left: 0;
 }
 .responsive-block-editor-addons-tm__content.skin-type-bubble
   .responsive-block-editor-addons-tm__desc {
