Frontend fix - Following blocks always takes 50% of entire advanced column block

--- a/src/blocks/advance-columns/styles/style.scss
+++ b/src/blocks/advance-columns/styles/style.scss
@@ -151,22 +151,22 @@
   flex-wrap: nowrap;
 }
 
-.responsive-columns-columns-1 > .responsive-column-wrap {
+.responsive-columns-columns-1 > .responsive-block-editor-addons-advanced-column-child {
   width: 100%;
 }
-.responsive-columns-columns-2 > .responsive-column-wrap {
+.responsive-columns-columns-2 > .responsive-block-editor-addons-advanced-column-child {
   width: 50%;
 }
-.responsive-columns-columns-3 > .responsive-column-wrap {
+.responsive-columns-columns-3 > .responsive-block-editor-addons-advanced-column-child {
   width: 33.33%;
 }
-.responsive-columns-columns-4 > .responsive-column-wrap {
+.responsive-columns-columns-4 > .responsive-block-editor-addons-advanced-column-child {
   width: 25%;
 }
-.responsive-columns-columns-5 > .responsive-column-wrap {
+.responsive-columns-columns-5 > .responsive-block-editor-addons-advanced-column-child {
   width: 20%;
 }
-.responsive-columns-columns-6 > .responsive-column-wrap {
+.responsive-columns-columns-6 > .responsive-block-editor-addons-advanced-column-child {
   width: 16.66%;
 }
 
