--- a/src/blocks/image-hotspot/styles/styles.editor.scss
+++ b/src/blocks/image-hotspot/styles/styles.editor.scss
@@ -3,3 +3,23 @@
 		display:block !important;
 	}
 }
+
+.image-hotspot-toolbar-icons {
+	color: #ff6f61;
+}
+
+.image-hotspot-toolbar-icons .dashicons-format-image {
+	color: #ff6f61;
+	margin-right: 1rem;
+	height: 18px;
+	width: 18px;
+}
+
+.responsive_block_addons-hotspot-media-placeholder {
+	background: #fffde1!important;
+	border: 1px solid #5b5bff;
+}
+
+.responsive_block_addons-hotspot-media-placeholder .components-placeholder__fieldset {
+	margin-top: 1.8rem;
+}
