--- a/src/blocks/image-hotspot/styles/styles.editor.scss
+++ b/src/blocks/image-hotspot/styles/styles.editor.scss
@@ -16,7 +16,7 @@
 }
 
 .responsive_block_addons-hotspot-media-placeholder {
-	background: #fffde1!important;
+	background: #faf9f0!important;
 	border: 1px solid #5b5bff;
 }
 
