--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -2,4 +2,4 @@
 @import "../utils/components/**/editor.scss";
 @import "../blocks/**/styles.editor.scss";
 @import "../components/css/inspectorTabs.scss";
-@import "../settings-components/Typography Settings/editor.scss";
+@import "../settings-components/TypographySettings/editor.scss";
