--- a/src/blocks/feature-grid/styles/styles.editor.scss
+++ b/src/blocks/feature-grid/styles/styles.editor.scss
@@ -1,102 +1,54 @@
-/**
- * Editor styles for the admin
- */
-.responsive-block-editor-addons-block-feature {
-  align-items: flex-start;
-  padding: 0;
-  position: relative;
-  text-align: center;
-
-  .responsive-block-editor-addons-feature-content {
-    flex: 1 1 auto;
-
-    .responsive-block-editor-addons-feature-name {
-      display: block;
-      font-size: 1.5em;
-      margin: 1em 0;
-      padding: 0;
-      margin-top: 0;
-    }
-    .responsive-block-editor-addons-feature-description {
-      margin: 0;
-
-      p {
-        margin-bottom: 10px;
-      }
-      &:last-of-type {
-        margin-bottom: 10px;
-      }
-    }
-    .responsive-block-editor-addons-feature-social-icons-wrapper {
-      display: inline-block;
-
-      .responsive-block-editor-addons-feature-social-icons {
-        list-style-type: none;
-        display: flex;
-        margin: 0;
-        padding: 0;
-
-        li {
-          margin-right: 10px;
-          margin-left: 10px;
-
-          a {
-            display: block;
-          }
-        }
-      }
-    }
+.wp-block[data-type="responsive-block-editor-addons/pricing-table"] {
+  .block-list-appender {
+    display: none !important;
   }
-  .responsive-block-editor-addons-feature-avatar {
-    flex: 0 0 auto;
-    position: relative;
-    height: auto;
 
-    &-img {
-      height: 100% !important;
-      object-fit: cover;
-      position: absolute;
-      top: 0;
-      vertical-align: middle;
-      width: 100%;
-    }
-
-    button {
-      height: 100%;
-      left: 0;
-      padding: 0;
-      position: absolute;
-      width: 100%;
-      background-color: #fff;
-      box-shadow: 0 0 0 1px #555d66;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      &:focus:not(:disabled) {
-        background: none;
-        border: none;
-        box-shadow: 0 0 0 2px #007cba;
-        outline: none;
-      }
-
-      svg {
-        fill: #555d66;
-        margin: auto auto;
-        pointer-events: none;
-        transform: translate3d(0, 0, 0);
-        transition: transform 100ms cubic-bezier(0.645, 0.045, 0.355, 1);
-        top: 50%;
-        position: absolute;
-        transform: translateY(-50%);
-      }
-
-	  > .dashicon {
-		  padding-bottom: 100%;
-	  }
-    }
+  form.blocks-button__inline-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
   }
+}
+.wp-block-responsive-block-editor-addons-feature-grid {
+  z-index: 9999;
+
+  .wp-block-responsive-block-editor-addons-feature-grid-item__button {
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.responsive-block-editor-addons-pricing-table-background-image-wrap {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 100%;
+  z-index: -1;
+}
+.responsive-block-editor-addons-pricing-table-background-image {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  transition: 0.3s ease;
+}
+
+.wp-block-responsive-block-editor-addons-feature-grid-item
+  .block-editor-url-input
+  input[type="text"],
+.ab-block-pricing-table-inside
+  .block-editor-block-list__block
+  .block-editor-url-input
+  input[type="text"] {
+  width: 100%;
+  border: 1px solid #0066cc;
+}
+.has-columns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
 }
 .has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 2 - 0.5em);
@@ -135,77 +87,116 @@
 .has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
   max-width: calc(100% / 4.15 - 2.5em);
 }
+@media (min-width: 600px) {
+  .has-columns.has-2-columns > *:not(.block-editor-inner-blocks),
+  .has-columns.has-3-columns > *:not(.block-editor-inner-blocks),
+  .has-columns.has-4-columns > *:not(.block-editor-inner-blocks) {
+    flex-basis: 50%;
+  }
+}
+@media (min-width: 782px) {
+  .has-columns.has-3-columns > *:not(.block-editor-inner-blocks),
+  .has-columns.has-4-columns > *:not(.block-editor-inner-blocks) {
+    flex-basis: 33.33%;
+  }
+}
+@media (min-width: 1280px) {
+  .has-columns.has-4-columns > *:not(.block-editor-inner-blocks) {
+    flex-basis: 25%;
+  }
+}
 
-@media (max-width: 576px) {
-	.wp-block-responsive-block-editor-addons-feature-grid-wrapper.has {
-    &-large,
-    &-small,
-    &-medium,
-    &-huge {
-      &-gutter.has {
-        &-1,
-        &-2,
-        &-3,
-        &-4 {
-          &-columns > *:not(.block-editor-inner-blocks) {
-            max-width: 100%;
-            margin-bottom: 20px;
-          }
-        }
+.wp-block[data-type="responsive-block-editor-addons/pricing-table-item"]
+  .wp-block-responsive-block-editor-addons-feature-grid-item__features {
+  margin: 0 0 30px;
+}
+.wp-block-responsive-block-editor-addons-feature-grid-item
+  .wp-block-responsive-block-editor-addons-feature-grid-item__features {
+  margin: 0 0 30px;
+  max-width: none;
+  padding: 0;
+}
+.wp-block-responsive-block-editor-addons-feature-grid {
+  .responsive-block-editor-addons-pricing-table-avatar {
+    flex: 0 0 auto;
+    position: relative;
+    margin-bottom: 15px;
+
+    &-img {
+      height: 100% !important;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      vertical-align: middle;
+      width: 100%;
+    }
+
+    button {
+      height: 100%;
+      left: 0;
+      padding: 0;
+      position: absolute;
+      width: 100%;
+      background-color: #fff;
+
+      &:focus:not(:disabled) {
+        background: none;
+        border: none;
+        box-shadow: 0 0 0 2px #007cba;
+        outline: none;
+      }
+
+      svg {
+        height: 100px;
+        fill: #555d66;
+        margin: auto auto;
+        pointer-events: none;
+        transform: translate3d(0, 0, 0);
+        transition: transform 100ms cubic-bezier(0.645, 0.045, 0.355, 1);
+      }
+    }
+  }
+
+  .responsive-block-editor-addons-feature-image-wrap {
+    button {
+      width: auto !important;
+
+      img {
+        margin-left: auto;
+        margin-right: auto;
       }
     }
   }
 }
 
-.page,
-.single,
-.blog,
-.search,
-.archive {
-  &.page-template-gutenberg-fullwidth,
-  &.sidebar-position-no:not(.woocommerce) {
-    .alignwide,
-    .alignfull {
-      .wp-block-responsive-block-editor-addons-feature-grid-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator),
-      .wp-block-responsive-block-editor-addons-feature-grid-wrapper:not(.wp-block-cover__inner-container):not(.wp-block-separator) {
-        &.has-small-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 2 - 0.5em);
-        }
-        &.has-small-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 3 - 1em);
-        }
-        &.has-small-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 4 - 1em);
-        }
-        &.has-medium-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 2 - 1em);
-        }
+.wp-block-cover .wp-block-responsive-block-editor-addons-feature-grid__inner {
+  color: #333;
+}
 
-        &.has-medium-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 2.975 - 1.5em);
-        }
-        &.has-medium-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 4 - 1.5em);
-        }
-        &.has-large-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 2.01 - 1.5em);
-        }
-        &.has-large-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 3.03 - 2em);
-        }
-        &.has-large-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 4.08 - 2em);
-        }
-        &.has-huge-gutter.has-2-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 2.02 - 2em);
-        }
-        &.has-huge-gutter.has-3-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 3.09 - 2.5em);
-        }
-        &.has-huge-gutter.has-4-columns > *:not(.block-editor-inner-blocks) {
-          max-width: calc(100% / 4.15 - 2.5em);
-        }
-      }
-    }
+.wp-block-responsive-block-editor-addons-feature-grid-item{
+  box-shadow: 0px 0px 2px 1px #e9e7e7;
+}
+
+.editor-styles-wrapper .wp-block-responsive-block-editor-addons-feature-grid-item__title,
+.editor-styles-wrapper p.wp-block-responsive-block-editor-addons-feature-grid-item__sub_price,
+.editor-styles-wrapper p.wp-block-responsive-block-editor-addons-feature-grid-item__button {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.responsive-block-editor-addons-feature-image-icon-wrap {
+  position: relative;
+  background-color: #eee;
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+
+  span {
+    position: absolute;
+    left: 40%;
+    top: 40%;
   }
+}
+.responsive-block-editor-addons-feature-image-wrap {
+  text-align: center;
 }
