--- a/src/blocks/advanced-text/styles/style.scss
+++ b/src/blocks/advanced-text/styles/style.scss
@@ -1,7 +1,7 @@
 .responsive-block-editor-addons-text-container {
 	display: grid;
 	grid-auto-flow: column;
-    grid-auto-columns: minmax(0, 1fr);
+    grid-auto-columns: auto;
     grid-column-gap: 30px;
 	hyphens: auto;
 }
@@ -13,7 +13,7 @@
 		}
 	}
 	&.responsive-block-editor-addons-columns-count-3 {
-		.ugb-text__text-wrapper {
+		.responsive-block-editor-addons-text-container {
 			grid-template-columns: 1fr 1px 1fr 1px 1fr;
 		}
 	}
@@ -44,7 +44,7 @@
 		grid-row-gap: 0;
 
 		.responsive-block-editor-addons-text-container {
-			grid-gap: 25px;
+			grid-gap: 20px;
 			grid-auto-columns: auto;
 		}
 	}
@@ -54,7 +54,7 @@
 		grid-row-gap: 0;
 
 		.responsive-block-editor-addons-text-container {
-			grid-gap: 25px;
+			grid-gap: 20px;
 			grid-auto-columns: auto;
 		}
 	}
@@ -64,7 +64,7 @@
 		grid-row-gap: 0;
 
 		.responsive-block-editor-addons-text-container {
-			grid-gap: 25px;
+			grid-gap: 20px;
 			grid-auto-columns: auto;
 		}
 	}
@@ -77,7 +77,9 @@
 		grid-row-gap: 0;
 
 		.responsive-block-editor-addons-text-container {
+			grid-gap: 20px;
 			order: 1;
+			grid-auto-columns: auto;
 		}
 		.responsive-block-editor-addons-wrapper {
 			order: 2;
@@ -89,6 +91,8 @@
 		grid-row-gap: 0;
 
 		.responsive-block-editor-addons-text-container {
+			grid-gap: 20px;
+			grid-auto-columns: auto;
 			order: 1;
 		}
 		.responsive-block-editor-addons-wrapper {
@@ -101,6 +105,8 @@
 		grid-row-gap: 0;
 
 		.responsive-block-editor-addons-text-container {
+			grid-gap: 20px;
+			grid-auto-columns: auto;
 			order: 1;
 		}
 		.responsive-block-editor-addons-wrapper {
