--- a/src/blocks/feature-grid/styles/styles.editor.scss
+++ b/src/blocks/feature-grid/styles/styles.editor.scss
@@ -1,4 +1,4 @@
-.wp-block[data-type="responsive-block-editor-addons/pricing-table"] {
+.wp-block[data-type="responsive-block-editor-addons/feature-grid"] {
   .block-list-appender {
     display: none !important;
   }
@@ -19,25 +19,10 @@
     margin-right: auto;
   }
 }
-.responsive-block-editor-addons-pricing-table-background-image-wrap {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: 100%;
-  z-index: -1;
-}
-.responsive-block-editor-addons-pricing-table-background-image {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-  transition: 0.3s ease;
-}
 
 .wp-block-responsive-block-editor-addons-feature-grid-item
   .block-editor-url-input
   input[type="text"],
-.ab-block-pricing-table-inside
   .block-editor-block-list__block
   .block-editor-url-input
   input[type="text"] {
@@ -106,56 +91,7 @@
   }
 }
 
-.wp-block[data-type="responsive-block-editor-addons/pricing-table-item"]
-  .wp-block-responsive-block-editor-addons-feature-grid-item__features {
-  margin: 0 0 30px;
-}
-.wp-block-responsive-block-editor-addons-feature-grid-item
-  .wp-block-responsive-block-editor-addons-feature-grid-item__features {
-  margin: 0 0 30px;
-  max-width: none;
-  padding: 0;
-}
 .wp-block-responsive-block-editor-addons-feature-grid {
-  .responsive-block-editor-addons-pricing-table-avatar {
-    flex: 0 0 auto;
-    position: relative;
-    margin-bottom: 15px;
-
-    &-img {
-      height: 100% !important;
-      object-fit: cover;
-      position: absolute;
-      top: 0;
-      vertical-align: middle;
-      width: 100%;
-    }
-
-    button {
-      height: 100%;
-      left: 0;
-      padding: 0;
-      position: absolute;
-      width: 100%;
-      background-color: #fff;
-
-      &:focus:not(:disabled) {
-        background: none;
-        border: none;
-        box-shadow: 0 0 0 2px #007cba;
-        outline: none;
-      }
-
-      svg {
-        height: 100px;
-        fill: #555d66;
-        margin: auto auto;
-        pointer-events: none;
-        transform: translate3d(0, 0, 0);
-        transition: transform 100ms cubic-bezier(0.645, 0.045, 0.355, 1);
-      }
-    }
-  }
 
   .responsive-block-editor-addons-feature-image-wrap {
     button {
@@ -173,12 +109,15 @@
   color: #333;
 }
 
-.wp-block-responsive-block-editor-addons-feature-grid-item{
+.responsive-block-editor-addons-block-feature-grid.grid-layout-basic .wp-block-responsive-block-editor-addons-feature-grid-item{
   box-shadow: 0px 0px 2px 1px #e9e7e7;
+  padding: 60px 35px;
+  border-radius: 12px;
+  background-color: #fff;
 }
 
 .editor-styles-wrapper .wp-block-responsive-block-editor-addons-feature-grid-item__title,
-.editor-styles-wrapper p.wp-block-responsive-block-editor-addons-feature-grid-item__sub_price,
+.editor-styles-wrapper p.wp-block-responsive-block-editor-addons-feature-grid-item__desc,
 .editor-styles-wrapper p.wp-block-responsive-block-editor-addons-feature-grid-item__button {
   margin-top: 0px;
   margin-bottom: 0px;
